syntax = "proto3";
package es;
option go_package = "github.com/seanhagen/endless_stream/protos/go";

enum ClientType {
  // Unknown is the default value for a ClientType value, indicates
  // the client type is unknown.
  Unknown = 0;

  // Godot indicates the client type is a Godot game engine client.
  Godot = 1;

  // CLI indicates the client type is a command line interface client.
  CLI = 2;
}

message JoinRequest {
  string id = 1;

  string name = 2;


}

message JoinResponse {}

message ClientEvent {}

message ServerEvent {}

message LeaveRequest {}

message LeaveResponse {}
